[package]
name = "jinglec"
version = "0.1.0"
authors = ["Millo Evers <opensource@exedys.com>"]
edition = "2018"

[dependencies]
dirs = "2.0.2"
structopt = "0.2.18"
either = "1.5.2"
indexmap = "1.2.0"
enum-methods = "0.0.8"
ansi_term = "0.12.1"

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
rev = "136dd5e06db47f77cb329cd5f6625273dfd3afd7"
features = ["llvm8-0"]

[dev-dependencies]
lazy_static = "1.3.0"
